# opcua-lwm2m-server

./: .cproject  .gitmodules  .project  CMakeLists.txt  LWM2MDevice.cpp  LWM2MDevice.h  LWM2MObject.cpp  LWM2MObject.h  LWM2MResource.cpp  LWM2MResource.h  LWM2MResourceObserver.h  LWM2MServer.cpp  LWM2MServer.h  LWM2MServerObserver.h  README.md  main.cpp  wakaama.patch
